--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "express": "^4.17.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
@@ -25,5 +26,18 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "prettier": "^2.2.1"
-  }
+  },
+  "description": "```bash\r # install dependencies\r $ npm install",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FeBD8/HypermediaProject-Monstars.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/FeBD8/HypermediaProject-Monstars/issues"
+  },
+  "homepage": "https://github.com/FeBD8/HypermediaProject-Monstars#readme"
 }
