--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
     "express": "^4.17.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
