--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "HypermediaProject-Monstars",
   "version": "1.0.0",
@@ -15,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
     "express": "^4.17.1",
+    "mmcc": "git+https://gitlab.com/i3lab/mmcc/frontend/mmcc-vue.git",
     "nuxt": "^2.15.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
